--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-03  Reuben Thomas  <rrt@sc3d.org>  (tiny change)
+
+	* doc/libtool.texi (Libltdl interface): Fix typo.
+
 2007-05-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* Makefile.am (clean-ltmain-sh): Removed.
