--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-09  Gary V. Vaughan  <gary@gnu.org>
+
+	* tests/lt_dladvise.at: Commit missing file from below.
+
 2007-05-08  Gary V. Vaughan  <gary@gnu.org>
 
 	Without this patch, lt_dlopen always opens modules with symbol
