--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-05-28  Peter O'Gorman  <peter@pogma.com>
+
+	* libltdl/config/ltmain.m4sh (func_mode_link),
+	libltdl/m4/libtool.m4 [darwin]: Only use ${wl} in verstring
+	with xlc.
+
 2007-05-22  Gary V. Vaughan  <gary@gnu.org>
 
 	* tests/lt_dladvise.at:  Use the lib prefix throughout for
