--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-28  Peter O'Gorman  <peter@pogma.com>
+
+	* ltmain.in, libtool.m4 [darwin]: Only use ${wl} in verstring
+	with xlc.
+
 2007-05-03  Reuben Thomas  <rrt@sc3d.org>  (tiny change)
 
 	* doc/libtool.texi (Libltdl interface): Fix typo.
