--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-06-01  Steve Ellcey  <sje@cup.hp.com>
+
+	* libtool.m4 (LT_CMD_MAX_LEN): Try using getconf to set
+	lt_cv_sys_max_cmd_len.
+
 2007-05-28  Peter O'Gorman  <peter@pogma.com>
 
 	* ltmain.in, libtool.m4 [darwin]: Only use ${wl} in verstring
