* libltdl/m4/libtool.m4 (old_archive_cmds): Remove old_deplibs. * tests/dmacks.at: Check for archives as members of static archives. Currently XFAILS, above only eliminates one of the two static archives. * Makefile.am: Add test. Reported by Daniel Macks <dmacks@netspace.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2007-06-03  Peter O'Gorman  <peter@pogma.com>
+
+	* libltdl/m4/libtool.m4 (old_archive_cmds): Remove
+	old_deplibs.
+	* tests/dmacks.at: Check for archives as members of static
+	archives. Currently XFAILS, above only eliminates one of the
+	two static archives.
+	* Makefile.am: Add test.
+	Reported by Daniel Macks <dmacks@netspace.org>
+
 2007-06-01  Steve Ellcey  <sje@cup.hp.com>
 
 	* libltdl/m4/libtool.m4 (LT_CMD_MAX_LEN): Try using getconf
