--- a/ChangeLog
+++ b/ChangeLog
@@ -2,9 +2,9 @@
 
 	* libltdl/m4/libtool.m4 (old_archive_cmds): Remove
 	old_deplibs.
-	* tests/dmacks.at: Check for archives as members of static
-	archives. Currently XFAILS, above only eliminates one of the
-	two static archives.
+	* tests/archive-in-archive.at: Check for archives as members
+	of static archives. Currently XFAILS, above only eliminates
+	one of the two static archives.
 	* Makefile.am: Add test.
 	Reported by Daniel Macks <dmacks@netspace.org>
 
