--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-06-17  Charles Wilson  <libtool@cwilson.fastmail.fm>
+
+	* libtool.m4 (LT_CMD_MAX_LEN): ensure stderr
+	is redirected even when getconf does not exist.
+
 2007-06-03  Peter O'Gorman  <peter@pogma.com>
 
 	* libtool.m4 (old_archive_cmds): Remove old_deplibs.
