* AUTHORS: Add myself.

--- a/AUTHORS
+++ b/AUTHORS
@@ -26,3 +26,4 @@
 * The following people also enjoy write access under the given rules:
 
     Peter Ekberg		peda@lysator.liu.se
+    Noah Misch			noah@cs.caltech.edu
