--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-06-17  Noah Misch  <noah@cs.caltech.edu>
+
+	* AUTHORS: Add myself.
+
 2007-06-17  Peter O'Gorman  <peter@pogma.com>
 
 	* libltdl/m4/libtool.m4 (LT_CMD_MAX_LEN): add quotes to
