--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-06-23  Peter O'Gorman  <peter@pogma.com>
 
+	* configure.ac: Bump version.
+	* NEWS: Update.
+
+2007-06-23  Peter O'Gorman  <peter@pogma.com>
+
 	GNU libtool 1.5.24 is released.
 
 	* configure.ac: Bump version.
