--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 NEWS - list of user-visible changes between releases of GNU Libtool
 
+New in 1.5.25a: 2007-??-??; CVS version 1.5.25a, Libtool team:
+* Bug Fixes.
+
 New in 1.5.24: 2007-06-17; CVS version 1.5.23c, Libtool team:
 * Initial support for Interix newer than version 3.
 * Use getconf ARG_MAX to find the max command line length.
