--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-06-30  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* libtool.m4 (AC_LIBTOOL_DLOPEN_SELF): Correct a typo ("-dld"
+	instead of "-ldld").
+
 2007-06-23  Peter O'Gorman  <peter@pogma.com>
 
 	* configure.ac: Bump version.
